Finished selecting images and emailing

--- a/WeekOneSolutions/app/src/main/res/layout/content_main.xml
+++ b/WeekOneSolutions/app/src/main/res/layout/content_main.xml
@@ -9,6 +9,19 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main" tools:context=".MainActivity">
 
-    <TextView android:text="Hello World!" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/pic_button"
+            android:id="@+id/pic_btn"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/email_button"
+            android:id="@+id/email_btn"/>
+    </LinearLayout>
 </RelativeLayout>
