--- a/app/src/main/res/layout/activity_large_text.xml
+++ b/app/src/main/res/layout/activity_large_text.xml
@@ -7,9 +7,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.skafle.weekonesolutions.LargeTextActivity">
 
+    <!-- Our scroll View -->
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+        <!-- Note that a LinearLayout is conventionally placed inside a ScrollView -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -17,6 +19,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/long_text"/> <!-- IMPORTANT: Don't hardcode strings -->
+                <!-- ProjectMates would be extremely pissed off if they saw a wall of text in
+                    your layout file -->
         </LinearLayout>
     </ScrollView>
 
